apollo-router/src/apollo_studio_interop/snapshots/uhg_custom_appollo_roouter__apollo_studio_interop__tests__enums_from_response_fragments.snap
---
source: apollo-router/src/apollo_studio_interop/tests.rs
assertion_line: 301
expression: "&generated"
---
SomeEnum:
  - SOME_VALUE_1
  - SOME_VALUE_10
  - SOME_VALUE_11
  - SOME_VALUE_13
  - SOME_VALUE_14
  - SOME_VALUE_4
  - SOME_VALUE_5
  - SOME_VALUE_6
  - SOME_VALUE_8
